# salary_calculator

./: pyproject.toml  readme.md  requirements.txt  run.sh
python/: functions.py  main.py  salary_calculator.py  savings_calculator.py  tax_calculator.py
