[tool.poetry]
name = "salary calculator"
version = "0.1.0"
description = "Basic calculator for savings"
authors = ["Rayleigh47 <yanming8870@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
