[tool.poetry]
name = "salary calculator"
version = "0.1.0"
description = "Basic calculator for savings"
authors = ["Rayleigh47 <yanming8870@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
streamlit = "^1.40.0"
pandas = "^2.2.3"
streamlit-scrollable-textbox = "^0.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
